# NNetwork2

./: .gitignore  CMakeLists.txt  Data.cpp  Data.h  DataSpecs.h  Debug.cpp  Debug.h  NLayer.cpp  NLayer.h  NNetwork.cpp  NNetwork.h  README.MD  Training.cpp  Training.h  main.cpp
